--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME="Lazy Movie"
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:KuinMcotDGX6GHYy4u93WnYILNzNcwfy/ZAKbiHcLjM=
 APP_DEBUG=true
 APP_URL=http://localhost
@@ -8,11 +8,10 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=movieblog_yt
-DB_USERNAME=root
+DB_CONNECTION=pgsql
+DB_PORT=5432
+DB_DATABASE=movieblog_db
+DB_USERNAME=movieblog_db
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
